--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 </div>
 
 <body>
+   
+    <script src="./scripts/game.js"></script>
+    <script src="./scripts/interface.js"></script>
     
 </body>
 </html>
