--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
         Jogo da velha
     </title>
+    <link rel="shortcut icon" type="image/jpg" href="/imagem/jogo-da-velha.pngico.png"/>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
 </head>
